# photobox

./: Photobox.py  README.md  pb_src.tbz
Cam/: cam.avg
gcursor-0.061/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.in
gcursor-0.061/data/: Makefile.am  Makefile.in  gcursor.desktop.in  gcursor.glade
gcursor-0.061/po/: ChangeLog  POTFILES.in  de.gmo  de.po  es.gmo  es.po  gcursor.pot  sv.gmo  sv.po
gcursor-0.061/src/: Makefile.am  Makefile.in  gcursor.c
media/: datafiles.tar
media/datafiles/: Ausschnitt1903_pr.data  Ausschnitt1903_rt.data  Ausschnitt1912_pr.data  Ausschnitt1912_rt.data  Borowka1992_pr.data  Borowka1992_rt.data  Bratseth1994_pr.data  Bratseth1994_rt.data  DasDouble2004_pr.data  DasDouble2004_rt.data  Ellipsen-Coordinaten
scripts/: archive_png.sh  check_queue.sh  do_compose.sh  do_compose_NEW.sh  do_print.sh  log2file.sh
src/: FSM.py  Photobox.py  PhotoboxBREMEN_Jun06.py  Photobox_BREMEN.py  Photobox_FBCurs.py  Photobox_NoCAM.py  Photobox_alternativ.py  avgtools.py  callback.py  camera_test.avg  camtest.py  mousecursor.avg  mousecursor.py  parport_test1.py  pb_screens.avg  pb_screens.avg_withZ  pb_screens_BREMEN.avg  pb_screens_Fire-i.avg  pb_screens_iSight.avg  state_machine.py
src/Cam/: cam.py
