# Process this file with autoconf to produce a configure script.
AC_INIT(src)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gcursor, 0.061)

# Checks for programs.
AC_PROG_CC
AC_PROG_INTLTOOL

# Checks for libraries.
PKG_CHECK_MODULES(GCURSOR,[
	glib-2.0 
	gobject-2.0
	gtk+-2.0 
	gnome-vfs-2.0
	libgnomeui-2.0
	libglade-2.0
	gconf-2.0
	xcursor
	])

AC_SUBST(GCURSOR_LIBS)
AC_SUBST(GCURSOR_CFLAGS)

# installation paths
AC_MSG_CHECKING(prefix)

if test "x${prefix}" = "xNONE"; then
	PACKAGE_PREFIX="${ac_default_prefix}"
else
	PACKAGE_PREFIX="${prefix}"
fi
AC_MSG_RESULT($PACKAGE_PREFIX)

# i18n support
dnl please keep them in alphabetical order
ALL_LINGUAS="de es sv"

GETTEXT_PACKAGE=gcursor
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE",
	[The package name for gettext])
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT

# setting correct paths
PACKAGE_LOCALE_DIR="${PACKAGE_PREFIX}/${DATADIRNAME}/locale"
AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR,"$PACKAGE_LOCALE_DIR",
	[The package's locale path for gettext])

PACKAGE_DATA_DIR="${PACKAGE_PREFIX}/${DATADIRNAME}"
AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR,"$PACKAGE_DATA_DIR",
	[The package's data path])

AC_OUTPUT([
	Makefile
	src/Makefile
	data/Makefile
	po/Makefile.in
	])
